# gemini-tools-play

./: .gitignore  Cargo.toml  README.md  justfile
src/: error.rs  geo_location.rs  main.rs  weather.rs
src/geo_location/: response.rs
src/weather/: response.rs
