[package]
name = "cloud-gemini"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tracing-subscriber = { version = "^0.3.19", features = ["env-filter"] }
genai = "0.1.23"
tracing = "^0.1.41"
tokio = { version = "^1.44.2" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
