[package]
name = "cloud-gemini"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
tracing-subscriber = { version = "^0.3.19", features = ["env-filter"] }
genai = "0.2.2"
tracing = "^0.1.41"
tokio = { version = "^1.44.2" }
# futures = "^0.3.31"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
anyhow = "^1.0.98"
reqwest = "^0.12.15"